test/regress/coverage-item-lookup-LXY-fallthrough.test
; Coverage for item.cc break in L/X/Y cases of lookup
; When an unknown function starting with L, X, or Y is requested

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format "%(Lfoo)\n" -> 1
__ERROR__
While calculating format expression:
  Lfoo
While evaluating value expression:
  Lfoo
  ^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Lfoo'
end test

test reg --format "%(Xfoo)\n" -> 1
__ERROR__
While calculating format expression:
  Xfoo
While evaluating value expression:
  Xfoo
  ^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Xfoo'
end test

test reg --format "%(Yfoo)\n" -> 1
__ERROR__
While calculating format expression:
  Yfoo
While evaluating value expression:
  Yfoo
  ^^^^
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Unknown identifier 'Yfoo'
end test
